--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,17 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap");
 
 :root {
-  --slidev-theme-primary: #3B82F6;
-  --border-blue: #6BBAE7;
+  --slidev-theme-primary: #3b82f6;
+  --border-blue: #6bbae7;
   --slidev-slide-container-background: black;
-  --slidev-theme-font-family-default: 'Noto Sans TC', 'Microsoft JhengHei', 'MingLiU', sans-serif;
+  --slidev-theme-font-family-default:
+    "Noto Sans TC", "Microsoft JhengHei", "MingLiU", sans-serif;
 }
 
 .slidev-layout {
   width: 100%;
   height: 100%;
   background-color: transparent;
-  background-image: url('../assets/default-bg.svg');
+  background-image: url("../assets/default-bg.svg");
   background-repeat: no-repeat;
   background-size: cover;
   overflow: hidden;
@@ -31,6 +32,18 @@ h3 {
 
 p {
   @apply text-[28px] line-height-relaxed px-3;
+}
+
+ol {
+  @apply list-outside text-[28px] line-height-relaxed pl-10;
+}
+
+ol ol {
+  @apply text-[26px] line-height-relaxed pl-6;
+}
+
+ol ol ol {
+  @apply text[24px] line-height-relaxed;
 }
 
 ul {
